tests/rosetta/out/Java/burrows-wheeler-transform.error
parse: error[P052]: /workspace/mochi/tests/rosetta/x/Mochi/burrows-wheeler-transform.mochi:51:41: unexpected token "-1" (expected ")")
  --> /workspace/mochi/tests/rosetta/x/Mochi/burrows-wheeler-transform.mochi:51:41

 51 |     last = last + substring(table[i], le-1, le)
    |                                         ^

help:
  Unbalanced parentheses. Check for missing `(` or `)`.